syntax = "proto3";

option csharp_namespace = "Getaway.Infrustructure";

package authentication;

service AuthenticationService {
  rpc Authentication(AuthenticationRequest) returns (AuthenticationReply);
  rpc Registration(RegistrationRequest) returns (RegistrationReply);

}

message AuthenticationRequest {
  string email = 1;
  string password = 2;
}

message AuthenticationReply {
  int32 user_id = 1;
}

message RegistrationRequest{
	string email = 1;
	string password = 2;
	string first_name = 6;
    string second_name = 3;
    string last_name = 4;
    string phone = 5;
}

message RegistrationReply{
	int32 id_user = 1;
	string tag = 2;
}

